demo/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-0
spec:
  ports:
  - port: 9000
    targetPort: 9000
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: server-0
---
apiVersion: v1
kind: Service
metadata:
  name: server-1
spec:
  ports:
  - port: 9000
    targetPort: 9000
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: server-1
---
apiVersion: v1
kind: Service
metadata:
  name: server-2
spec:
  ports:
  - port: 9000
    targetPort: 9000
  clusterIP: None
  selector:
    statefulset.kubernetes.io/pod-name: server-2
