demo/routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server
spec:
  host: server
  subsets:
  - name: v0
    labels:
      version: v0
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
  - match:
    - headers:
        x-server-name:
          exact: server-0
    route:
    - destination:
        host: server
        subset: v0
  - match:
    - headers:
        x-server-name:
          exact: server-1
    route:
    - destination:
        host: server
        subset: v1
  - match:
    - headers:
        x-server-name:
          exact: server-2
    route:
    - destination:
        host: server
        subset: v2
  - route:
    - destination:
        host: server
        subset: v0
